# share

./: .editorconfig  .flake8  .gitignore  README.md  cheatsheet.md  resources.md
architecture_patterns_with_python/: Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  flask_app.py  model.py  orm.py  pyproject.toml  repository.py  services.py
architecture_patterns_with_python/ch01_domain_model/: model.py  test_batch.py
architecture_patterns_with_python/ch01_domain_modeling/: model.py
architecture_patterns_with_python/ch02_repository_pattern/: test_batch.py
architecture_patterns_with_python/ch03_coupling_and_abstractions/: sync.py  test_sync.py
architecture_patterns_with_python/ch04_first_use_case/: model.py  repository.py  test_api.py  test_orm.py
architecture_patterns_with_python/ch04_service_layer/: Dockerfile  conftest.py  flask_app.py  orm.py  test_allocate.py  test_api.py  test_repository.py  test_services.py
architecture_patterns_with_python/ch05_high_gear_low_gear/: docker-compose.yml
architecture_patterns_with_python/ch06_unit_of_work_pattern/: Dockerfile
architecture_patterns_with_python/tests/: conftest.py  random_refs.py
book/: README.md
book/seven_concurrency_models_in_seven_weeks/: README.md
codility/: README.md
dsaCamp/0021_MergeTwoSortedLists/: README.md
dsaCamp/0026_RemoveDuplicatesFromSortedArray/: README.md
dsaCamp/0088_MergeSortedArray/: README.md
dsaCamp/0125_ValidPalindrome/: README.md
rust/: README.md
rust/rust-first-class/module04/: Cargo.toml  README.md
rust/rust-first-class/module04/src/: main.rs
(+132 files in other folders)
